  thanks to Dave Henderson for bug report and fix.)

* `stat_smooth` now adjusts confidence intervals from \code{loess} using a 
  t-based approximation

* `scale_colour_gradient` and `scale_fill_gradient` now use a colour scheme
  with constant hue but varying chroma and luminance. This is better because
  it creates a natural ordering inline with the order of the colour values.

DEVELOPMENT

* ggplot2 has moved away from the two (!!) homegrown documentation systems
  that it previously relied on, and now uses roxygen extensively. The current
  downside is that this means that ggplot2 website can no longer be updated,
  but I hope work with the `helpr` package will resolve that shortly.

* ggplot2 now uses a `NAMESPACE`, and only exports functions that should be
  user visible - this should make it play considerably more nicely with other
  packages in the R ecosystem. Note that this means you now need to explicitly
  load `plyr` (and other packages) if you are using them elsewhere in your
  code.

* ggplot2 now has a start on a set of automated tests. As this test suite
  expands it will help me ensure that bugs stay fixed, and that old bugs don't
  come back in new versions. A test suite also gives me more confidence when
  I'm modifying code, which should help with general code quality.

DOCUMENTATION

* Thorough clean up and checking, including documenting all arguments,
  adding systematic cross-references, and adding commonly requested examples.

* Complete series of aesthetics pages (grouped subsets of aesthetics) with
  examples of how to use the major ones, see e.g. ?fill

* Added a complete list of theme opts with usage examples. "?opts" now brings
  this list up.

* Added "translate" pages to demonstrate usage between qplot-ggplot,
  qplot-base, qplot-lattice, and qplot-gpl.

SCALES

* scales have been rewritten to use the new `scales` package, which does a
  much better job at defining what a scale is and making it easier for you to